--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header class="head head__top">
         <div class="head__menu container ">
             <nav>
-                <a href="#" class="logo"><img src="./img/6182235a66337.svg" alt=""></a>
+                <a href="#" class="logo"><img src="./img/6182235a66337.svg" alt="Rasm"></a>
                 <p>|</p>
                 <ul>
                     <li><a href="./index.html">Bosh sahifa
